@@ -1,10 +1,10 @@
 #! /bin/sh
-# $Id: iptables_display.sh,v 1.6 2016/02/09 09:37:44 nanard Exp $
-IPTABLES=/sbin/iptables
+# $Id: iptables_display_miniupnpd.sh,v 1.1 2016/02/12 15:23:29 nanard Exp $
+
+. $(dirname "$0")/miniupnpd_functions.sh
 
 #display miniupnpd chains
-$IPTABLES -v -n -t nat -L MINIUPNPD
-$IPTABLES -v -n -t nat -L MINIUPNPD-POSTROUTING
-$IPTABLES -v -n -t mangle -L MINIUPNPD
-$IPTABLES -v -n -t filter -L MINIUPNPD
-
+$IPTABLES -v -n -t nat -L $CHAIN
+$IPTABLES -v -n -t nat -L $CHAIN-POSTROUTING
+$IPTABLES -v -n -t mangle -L $CHAIN
+$IPTABLES -v -n -t filter -L $CHAIN
